# emacs-extractor

./: .gitignore  README.org  el-semi-fuzz.el  extraction_config.py  extraction_java.py  pyproject.toml
src/emacs_extractor/: __init__.py  __main__.py  config.py  constants.py  extractor.py  misc.py  partial_eval.py  subroutines.py  transpiler.py  utils.py  variables.py
