[project]
name = "emacs-extractor"
version = "0.1.0"
description = "Extracts symbols, subroutines and initialization logic from Emacs source code"
authors = [
    {name = "gudzpoz", email = "gudzpoz@live.com"},
]
dependencies = ["pyparsing>=3.2.0", "tree-sitter>=0.23.2", "tree-sitter-c>=0.23.2"]
requires-python = ">=3.12"
license = {text = "GPL-3.0-only"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
emacs-extractor = "emacs_extractor.__main__:entry_point"

[tool.pdm]
distribution = true

